syntax = "proto3";

message OrderBookRequest {
  string exchange = 1;
  string symbol = 2;
}

message OrderBookEntry {
  double price = 1;
  double quantity = 2;
}

message OrderBookResponse {
  int64 lastUpdate = 1;
  string exchange = 2;
  string symbol = 3;
  repeated OrderBookEntry asks = 4;
  repeated OrderBookEntry bids = 5;
}

service OrderBookManager {
  rpc OrderBook(OrderBookRequest) returns (OrderBookResponse);
}
